# PR-OpenCL

./: CLlib.cpp  CLlib.h  CMakeLists.txt  GCC_command.txt  MPlib.cpp  MPlib.h  README.md  main.cpp  testCL.cl
